fix the problem with the navbar going behind the maps

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -18,6 +18,7 @@ body {
   background-color: #61A949;
   display: flex;
   flex-direction: column;
+  z-index: 9999;
 }
 
 li {
@@ -47,6 +48,7 @@ li a:hover {
     height: 75px;
     display: flex;
     flex-direction: row;
+    z-index: 9999;
   }
 }
 
